pl 43.jcn1
	- configure, set-lily.sh, release stuff

pl 41.hwn3
       - reinstated \property inheritance
       - \property SkipBars -> skipBars
       - \property midi_instrument -> midiInstrument
       - \property fontsize -> fontSize (mudela 1.0.18).
       - bf: add a space after lyrics.
       - junked flower DLL classes
       - rewrote repeat music and iterators (mudela 1.0.17)
         * Folded_repeat_iterator
         * Unfolded_repeat_iterator
         * New_repeated_music
         * syntax change: \repeat FOLDSTRING NUMBER Music [ALTERNATIVE Music_se
quence]
       - data struct simplification: junked Dynamic_req,
Absolute_dynamic_req, Span_dynamic_req, Slur_req, Beam_req. Use
Span_reqs and Text_script_reqs with type fields instead. 



pl 42.tca1
 	- updated mudela-book documentation
 	- misc mudela-book.py
 	- accordion: smaller dots + little script renaming


pl 42.jcn1
	- bf: hp-u(rg)x: user build; sm 73
 	- bf: hp-u(rg)x: sm74

pl 41.mb1
	- convert-mudela: convert textstyle -> textStyle
	- refman.yo: properties moved to correct contexts.
	- mudela-book.py: Added singleline, multiline options. 
	  Fixed default line width bug.

***************
pl 41.hwn2 (may 10, 1999)
	- bf: Score bar line thickness.
	- more paper writing
	- website tweaks.
	- Graphical_element::dim_cache_ now alloced separately. 
	- junked Graphical_element::absgolute_offset
	- Musique-de-Table 
	- mmrest_x_minimum now works at begin-of-line.
	- junked Span_bar::extra_x_off
	- \property foo.bar = \stringid + \otherstringid
	- bf: stop on lexer errors as well.
	- only do vertical alignment at Score level.
	- tweaked ledger endings a bit.
	

pl 41.hwn1
	- small fixes.
	- mudela-book.py patch (thanks MB)

pl 41.mb1
	- Added the installation instructions to the top web page.
	- N.W.Gade: Added triangolo part, minor changes.

pl 41.tca1
	- Lookup::accordion and removed some accordionfonts

***************

pl 40.uu2
	- rest ledger lines are dimensionless.