@@ -2,7 +2,7 @@ PACKAGE_NAME=LilyPond
 MAJOR_VERSION=1
 MINOR_VERSION=1
 PATCH_LEVEL=43
-MY_PATCH_LEVEL=jcn1
+MY_PATCH_LEVEL=crypton1
 
 # use the above to send patches: MY_PATCH_LEVEL is always empty for a
 # released version.
