@@ -51,6 +51,7 @@ INIMETAPOST = @INIMETAPOST@
 LN = @LN@
 LN_S = @LN_S@
 METAFONT = @METAFONT@
+MFMODE = @MFMODE@
 METAPOST = @METAPOST@
 MSGFMT = @MSGFMT@
 PATHSEP = @PATHSEP@
