@@ -1,0 +1,5 @@
+\score{
+	\context Staff \notes\relative c'{ 
+		\repeat unfold 4 { g a b c }
+	}
+}
