@@ -16,5 +16,3 @@
 		  }
 	>
 }
-
-\version "1.0.16"; 
